--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </ul>
                 <div id="logo" class="light">
                     <a href="#">
-                        <img src="/PS/sideline logo png white.png" alt="" class="lightImg">
-                        <img src="/PS/sideline logo png black.png" alt="" class="darkImg">
+                        <img src="PS/sideline logo png white.png" alt="" class="lightImg">
+                        <img src="PS/sideline logo png black.png" alt="" class="darkImg">
                     </a>
                 </div>
                 <ul>
@@ -77,4 +77,5 @@
             
         </div>
 </body>
+
 </html>
