--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
         <div id="logo" class="light">
           <a href="#">
-            <img src="/PS/sideline logo png white.png" alt="" class="lightImg">
-            <img src="/PS/sideline logo png black.png" alt="" class="darkImg">
+            <img src="PS/sideline logo png white.png" alt="" class="lightImg">
+            <img src="PS/sideline logo png black.png" alt="" class="darkImg">
           </a>
         </div>
         <ul>
@@ -71,10 +71,10 @@
                 <h1 style="font-size: 36px;font-weight: 400;" class="imgText">Presentation <span>— Why</span></h1><br><br>
             </div>
             <div class="slider">
-                <img src="/Arcline-logo-preview/arcline 1.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline 2.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline 3.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline 4.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline 1.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline 2.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline 3.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline 4.png" alt="" class="case-img">
             </div>
             <button id="seeMoreBtn">See More</button>
         </div>
@@ -117,3 +117,4 @@
   </div>
 </body>
 </html>
+
