--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <h1 style="font-weight: 400;" class="imgText">Presentation <span>— Why</span></h1><br><br>
             </div>
             <div class="slider">
-                <img src="/Arcline-logo-preview/arcline 1.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline 2.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline 3.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline 4.png" alt="" class="case-img">
+                <img src="/Arcline-logo-preview/arcline-1.png" alt="" class="case-img">
+                <img src="/Arcline-logo-preview/arcline-2.png" alt="" class="case-img">
+                <img src="/Arcline-logo-preview/arcline-3.png" alt="" class="case-img">
+                <img src="/Arcline-logo-preview/arcline-4.png" alt="" class="case-img">
             </div>
           </div>
           <div class="arrow-content">
@@ -131,3 +131,4 @@
   </div>
 </body>
 </html>
+
