--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <ul>
           <li><a href="#case-studies-section">Case studies</a></li>
           <li><a href="#graphix-section">Graphix</a></li>
-          <li><a href="#">Journey</a></li>
+          <li><a href="#journey-section">Journey</a></li>
         </ul>
         <div id="logo" class="light">
           <a href="#">
-            <img src="/PS/sideline logo png white.png" alt="" class="lightImg">
-            <img src="/PS/sideline logo png black.png" alt="" class="darkImg">
+            <img src="PS/sideline logo png white.png" alt="" class="lightImg">
+            <img src="PS/sideline logo png black.png" alt="" class="darkImg">
           </a>
         </div>
         <ul>
@@ -76,25 +76,35 @@
                 <h1 style="font-weight: 400;" class="imgText">Presentation <span>— Why</span></h1><br><br>
             </div>
             <div class="slider">
-                <img src="/Arcline-logo-preview/arcline-1.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline-2.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline-3.png" alt="" class="case-img">
-                <img src="/Arcline-logo-preview/arcline-4.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-1.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-2.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-3.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-4.png" alt="" class="case-img">
             </div>
           </div>
           <div class="arrow-content">
             <p class="arrow" id="arrowRight">&gt;</p>
           </div>
-          <div class="arrow-mobile">
-            <p class="arrow" id="arrowLeftMobile">&lt;</p>
-            <p class="arrow" id="arrowRightMobile">&gt;</p>
-          </div>
         </div>
+
+        <div class="mobile-version-case">
+          <img src="Arcline-logo-preview/arcline-1.png" alt="">
+          <br><br>
+          <img src="Arcline-logo-preview/arcline-2.png" alt="">
+          <br><br>
+          <img src="Arcline-logo-preview/arcline-3.png" alt="">
+          <br><br>
+          <img src="Arcline-logo-preview/arcline-4.png" alt="">
+          <br><br>
+        </div>
+
         <button id="seeMoreBtn">See More</button>
       </div>
-      <p id="case-closure" >I spent a few weeks planning it and a few more weeks building it. <br><br>The project failed for the reasons listed above, but fortunately, it inspired my current nickname and logo. <br><br>Most importantly, I truly enjoyed the process. <span style="font-weight: 300; color:var(--primary-color); opacity: 1; font-size: clamp(1rem, 3vw, 1.5rem); letter-spacing: 0;">Thanks</span> for reading this, pal, keep scrolling! :)</p>
+
+      <p id="case-closure">I spent a few weeks planning it and a few more weeks building it. <br><br>The project failed for the reasons listed above, but fortunately, it inspired my current nickname and logo. <br><br>Most importantly, I truly enjoyed the process. <span style="font-weight: 300; color:var(--primary-color); opacity: 1; font-size: clamp(1rem, 3vw, 1.5rem); letter-spacing: 0;">Thanks</span> for reading this, pal, keep scrolling! :)</p>
     </div>
   </div>
+
   <div class="container" id="graphix-section">
     <br>
     <div class="graphix-section">
@@ -109,6 +119,7 @@
         </div>
     </div>
   </div>
+
   <div class="container" id="journey-section">
     <br>
     <div class="journey-section">
@@ -117,18 +128,14 @@
         <div class="journey-content">
             <div class="journey-graphix">
             <h2>In graphic design</h2>
-            <span style="font-size: clamp(0.8rem, 3vw, 1.5rem);">
-              I first got into graphic design back in 2020 during the pandemic. With plenty of free time and just my laptop, I started creating profile pictures for people online—sometimes for free, sometimes for a little something. I joined a bunch of groups, connected with other creatives, and really enjoyed the process. By 2023, I took a break for a while, but now I'm back, excited to keep creating and growing.
-            </span>
+            <span>I first got into graphic design back in 2020 during the pandemic. With plenty of free time and just my laptop, I started creating profile pictures for people online—sometimes for free, sometimes for a little something. I joined a bunch of groups, connected with other creatives, and really enjoyed the process. By 2023, I took a break for a while, but now I'm back, excited to keep creating and growing.</span>
         </div>
         <div class="journey-prog">
             <h2>In programming</h2>
-            <span style="font-size: clamp(0.8rem, 3vw, 1.5rem);">I got into programming in the summer of 2024. Honestly, I was just bored and stumbled across a video claiming HTML and CSS were the easiest languages ever. So I thought, why not? After a couple of months of building websites every day, I pretty much had them down. School slowed me down when it came to JavaScript, but now I'm back at it and finally diving into it.</span>
+            <span>I got into programming in the summer of 2024. Honestly, I was just bored and stumbled across a video claiming HTML and CSS were the easiest languages ever. So I thought, why not? After a couple of months of building websites every day, I pretty much had them down. School slowed me down when it came to JavaScript, but now I'm back at it and finally diving into it.</span>
         </div>
         </div>
-        
     </div>
   </div>
 </body>
 </html>
-
