--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <br>
     <div class="case-studies-section">
       <div class="case-studies-title" style="display: flex; align-items: baseline; gap:12px;">
-        <h1 class="sectionH1">Case Studies</h1>
+        <h1 class="sectionH1">Case Studies</h1><br>
         <hr>
       </div>
       <h2>Arcline</h2><span>— About my first nickname and a logo project <br> that didn't make it (and why)</span>
@@ -134,6 +134,7 @@
   </div>
 </body>
 </html>
+
 
 
 
