--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   <div class="container" id="case-studies-section">
     <br>
     <div class="case-studies-section">
-      <div class="case-studies-title" style="display: flex; align-items: baseline; gap:12px;">
-        <h1 class="sectionH1">Case Studies</h1><br>
+      <div class="case-studies-title" >
+        <h1 class="sectionH1">Case Studies</h1>
         <hr>
       </div>
       <h2>Arcline</h2><span>— About my first nickname and a logo project <br> that didn't make it (and why)</span>
@@ -134,6 +134,7 @@
   </div>
 </body>
 </html>
+
 
 
 
