--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <h1 style="font-weight: 400;" class="imgText">Presentation <span>— Why</span></h1><br><br>
             </div>
             <div class="slider">
-                <img src="Arcline-logo-preview/arcline 1.png" alt="" class="case-img">
-                <img src="Arcline-logo-preview/arcline 2.png" alt="" class="case-img">
-                <img src="Arcline-logo-preview/arcline 3.png" alt="" class="case-img">
-                <img src="Arcline-logo-preview/arcline 4.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-1.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-2.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-3.png" alt="" class="case-img">
+                <img src="Arcline-logo-preview/arcline-4.png" alt="" class="case-img">
             </div>
           </div>
           <div class="arrow-content">
@@ -88,13 +88,13 @@
         </div>
 
         <div class="mobile-version-case">
-          <img src="Arcline-logo-preview/arcline 1.png" alt="">
+          <img src="Arcline-logo-preview/arcline-1.png" alt="">
           <br><br>
-          <img src="Arcline-logo-preview/arcline 2.png" alt="">
+          <img src="Arcline-logo-preview/arcline-2.png" alt="">
           <br><br>
-          <img src="Arcline-logo-preview/arcline 3-mobile.png.png" alt="">
+          <img src="Arcline-logo-preview/arcline-3-mobile.png.png" alt="">
           <br><br>
-          <img src="Arcline-logo-preview/arcline 4.png" alt="">
+          <img src="Arcline-logo-preview/arcline-4.png" alt="">
           <br><br>
         </div>
 
@@ -170,4 +170,5 @@
   </div>
 </body>
 </html>
+
 
