--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <button id="seeMoreBtn">See More</button>
       </div>
 
-      <p id="case-closure">I spent a few weeks planning it and a few more weeks building it. <br><br>The project failed for the reasons listed above, but fortunately, it inspired my current nickname and logo. <br><br>Most importantly, I truly enjoyed the process. <span style="font-weight: 300; color:var(--primary-color); opacity: 1; font-size: clamp(1rem, 3vw, 1.5rem); letter-spacing: 0;">Thanks</span> for reading this, pal, keep scrolling! :)</p>
+      <p id="case-closure">I spent a few weeks planning it and a few more weeks building it. <br><br>The project failed for the reasons listed above, but fortunately, it inspired my current nickname and logo. <br><br>Most importantly, I truly enjoyed the process. Thanks for reading this, keep scrolling! :)</p>
     </div>
   </div>
 
@@ -170,5 +170,6 @@
   </div>
 </body>
 </html>
+
 
 
