--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1 class="sectionH1">Case Studies</h1>
       </div>
       <hr>
-      <h2>Arcline</h2><span>— About my first nickname and a logo project <br> that didn't make it (and why)</span>
+      <h2>Arcline</h2><span>— About my first nickname and a logo project that didn't make it (and why)</span>
       
       <div class="case-studies-images">
         
@@ -170,6 +170,7 @@
   </div>
 </body>
 </html>
+
 
 
 
